RESOLVED FIXED270608
PresentationContextIOSurface::configure should check for invalid height before creating MTLTexture
https://bugs.webkit.org/show_bug.cgi?id=270608
Summary PresentationContextIOSurface::configure should check for invalid height befor...
Alex Christensen
Reported 2024-03-06 16:15:13 PST
Attachments
Alex Christensen
Comment 1 2024-03-06 16:53:01 PST
EWS
Comment 2 2024-03-06 20:03:20 PST
Committed 275772@main (055511d1aab8): <https://commits.webkit.org/275772@main> Reviewed commits have been landed. Closing PR #25559 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.