PresentationContextIOSurface::configure should check for invalid height before creating MTLTexture https://bugs.webkit.org/show_bug.cgi?id=270608 rdar://124143113

Reviewed by Mike Wyrzykowski.

* LayoutTests/fast/webgpu/invalid-surface-height-expected.txt: Added.
* LayoutTests/fast/webgpu/invalid-surface-height.html: Added.
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::configure):

Canonical link: https://commits.webkit.org/275772@main